Fix front page on mobile

--- a/css/front_page.css
+++ b/css/front_page.css
@@ -1,8 +1,14 @@
 #speakers {
   --avatar-size: 6rem;
-  width: 60vw;
+  @media screen and (min-width: 50em) {
+    ul {
+      columns: 2;
+    }
+  }
+  @media screen and (min-width: 80em) {
+    width: 60vw;
+  }
   ul {
-    columns: 2;
     padding:0
   }
   li {
